--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -361,6 +361,9 @@ li {
 
 }
 
+.pd-0 {
+	padding: 0 !important;
+}
 
 //// E============END STYLE CALENDER =========
 
@@ -371,6 +374,7 @@ li {
 	border: 1px solid #E2E8F0;
 	border-radius: 8px;
 	padding: 16px;
+
 
 	@include mq(max_md) {
 		padding: 8px;
@@ -1572,6 +1576,7 @@ li {
 
 		.footbaler-info-header-block {
 			display: flex;
+
 			@include mq(max_md) {
 				flex-direction: column;
 			}
@@ -1609,7 +1614,8 @@ li {
 
 			@include mq(max_md) {
 				flex-direction: column;
-				align-items: flex-start;;
+				align-items: flex-start;
+				;
 				margin-bottom: 12px;
 			}
 
@@ -1619,7 +1625,7 @@ li {
 				margin-right: 20px;
 
 				@include mq(max_md) {
-					margin-right:0;
+					margin-right: 0;
 					margin-bottom: 8px;
 
 				}
@@ -3989,6 +3995,7 @@ li {
 	.right-column {
 		width: auto !important;
 		min-width: max-content;
+
 		@include mq(max_md) {
 			width: 100% !important;
 		}
@@ -3999,6 +4006,7 @@ li {
 			max-width: 250px !important;
 		}
 	}
+
 	.info-block {
 		.club-name {
 			max-width: 250px !important;
@@ -4032,6 +4040,298 @@ li {
 
 			.value {
 				color: #1A202C;
+			}
+		}
+	}
+}
+
+.txt-live {
+	color: #F72727 !important;
+}
+
+.home-league-table-title {
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 17px;
+	color: #1A202C;
+	margin-bottom: 4px;
+
+	@include mq(max_md) {
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 15px;
+		margin-bottom: 2px;
+	}
+}
+
+.common-home-league-table {
+	.table-row {
+		border-bottom: 1px solid #EDF2F7;
+		display: flex;
+		padding: 16px 0px;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		color: #1A202C;
+
+		@include mq(max_md) {
+			font-size: 13px;
+			line-height: 15px;
+			flex-direction: column;
+		}
+	}
+
+	.left-column {
+		width: 40%;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+
+		@include mq(max_md) {
+			width: 100%;
+			justify-content: flex-start;
+			margin-bottom: 8px;
+		}
+
+	}
+
+	.right-column {
+		width: 60%;
+		display: flex;
+
+		@include mq(max_md) {
+			width: 100%;
+			align-items: center;
+		}
+
+	}
+
+	.time-wrapper {
+		min-width: 100px;
+		max-width: 100px;
+		margin-right: 50px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		@include mq(max_md) {
+			margin-right: 0;
+			min-width: 60px;
+			max-width: 60px;
+		}
+	}
+
+	.time {
+		display: flex;
+		flex-direction: column;
+		font-size: 11px;
+	}
+
+	.text-default {
+		color: #718096;
+	}
+
+	.text-highlight {
+		color: #0DC66D;
+	}
+
+
+	.dot {
+		display: block;
+		width: 3px;
+		height: 3px;
+		border: none;
+		border-radius: 50%;
+		background-color: #A0AEC0;
+
+		display: none;
+
+		@include mq(max_md) {
+			display: block;
+			margin: 0px 8px;
+		}
+	}
+	.league-name {
+		flex-grow: 1;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		padding-right: 12px;
+	}
+
+	.list-club-wrapper {
+		flex-grow: 1;
+		padding: 0px 8px;
+
+		@include mq(max_md) {
+			padding: 0;
+		}
+	}
+
+	.icon-box {
+		width: 24px;
+		height: 24px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		@include mq(max_md) {
+			margin-left: 8px;
+		}
+	}
+
+	.list-club-wrapper {
+		flex-grow: 1;
+		display: flex;
+		align-items: center;
+
+		@include mq(max_md) {
+			flex-direction: column;
+			align-items: flex-start;
+			padding-right: 16px;
+			border-right: 1px solid #E2E8F0;
+		}
+	}
+
+
+	.dash {
+		margin: 0px 5px;
+
+		@include mq(max_md) {
+			display: none;
+		}
+	}
+	.column-50 {
+		width: 50%;
+		display: flex;
+		align-items: center;
+
+		@include mq(max_md) {
+			width: 100%;
+		}
+	}
+
+	.club-item  {
+		display: flex;
+		align-items: center;
+	}
+	.club-image {
+		min-width: 20px;
+		max-width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		border: none;
+	}
+
+	.club-name {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		max-width: 150px;
+
+		@include mq(max_md) {
+			max-width: 250px;
+		}
+	}
+
+	.club-1 {
+		justify-content: flex-end;
+		@include mq(max_md) {
+			justify-content: space-between;
+			margin-bottom: 4px;
+		}
+		.club-item {
+			margin-right: 28px;
+
+			@include mq(max_md) {
+				flex-direction: row-reverse;
+			}
+		}
+		.club-image {
+			margin-left: 12px;
+
+			@include mq(max_md) {
+				margin: 0;
+				margin-right: 12px;
+			}
+		}
+	}
+
+	.club-2{
+		@include mq(max_md) {
+			justify-content: space-between;
+			flex-direction: row-reverse;
+		}
+		.club-item {
+			margin-left: 28px;
+			@include mq(max_md) {
+				margin-left: 0;
+			}
+		}
+		.club-image {
+			margin-right: 12px;
+		}
+	}
+}
+
+.common-home-league-table-wrapper {
+	margin-bottom: 16px;
+	@include mq(max_md) {
+		margin-bottom: 12px;
+	}
+}
+
+.live-schedule-table {
+	.table-row {
+		@include mq(max_md) {
+			flex-direction: row !important;
+		}
+
+		.left-column {
+			@include mq(max_md) {
+				width: 12%;
+			}
+
+			.time-wrapper  {
+				@include mq(max_md) {
+					min-width: max-content;
+					max-width: max-content;
+				}
+			}
+
+			.dot, .league-name {
+				@include mq(max_md) {
+					display: none;
+				}
+			}
+		}
+
+
+		.club-2 {
+			@include mq(max_md) {
+				justify-content: flex-end;
+			}
+		}
+		.right-column {
+			@include mq(max_md) {
+				width:88%;
+			}
+
+			.list-club-wrapper {
+				@include mq(max_md) {
+					border: none;
+					padding: 0;
+					border-left: 1px solid #E2E8F0;
+					padding-left: 16px;;
+				}
+			}
+		}
+
+		.icon-box {
+			@include mq(max_md) {
+				display: none;
 			}
 		}
 	}
