--- a/css/match.css
+++ b/css/match.css
@@ -1127,14 +1127,20 @@
 .visual-match-wrapper .visual-club-wrapper .visual-club {
   flex-grow: 1;
   position: relative;
+  display: flex;
+  justify-content: space-around;
+}
+@media only screen and (max-width: 991px) {
+  .visual-match-wrapper .visual-club-wrapper .visual-club {
+    flex-direction: column;
+  }
 }
 .visual-match-wrapper .visual-club-wrapper .visual-row {
   width: 48px;
-  height: 100%;
+  height: 524px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
   flex-direction: column;
 }
 @media only screen and (max-width: 991px) {
@@ -1144,84 +1150,12 @@
     flex-direction: row;
   }
 }
-.visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-1 {
-  top: 0;
-  left: 64px;
+.visual-match-wrapper .visual-club-wrapper .visual-club-2 {
+  flex-direction: row-reverse;
 }
 @media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-1 {
-    top: 10px;
-    left: 0;
-  }
-}
-.visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-2 {
-  top: 0;
-  left: 160px;
-}
-@media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-2 {
-    top: 75px;
-    left: 0;
-  }
-}
-.visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-3 {
-  top: 0;
-  left: 275px;
-}
-@media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-3 {
-    top: 157px;
-    left: 0;
-  }
-}
-.visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-4 {
-  top: 0;
-  left: 385px;
-}
-@media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-1 .visual-row-4 {
-    top: 240px;
-    left: 0;
-  }
-}
-.visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-1 {
-  top: 0;
-  right: 64px;
-}
-@media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-1 {
-    top: 80%;
-    right: 0;
-  }
-}
-.visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-2 {
-  top: 0;
-  right: 160px;
-}
-@media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-2 {
-    top: 55%;
-    right: 0;
-  }
-}
-.visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-3 {
-  top: 0;
-  right: 275px;
-}
-@media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-3 {
-    top: 30%;
-    right: 0;
-  }
-}
-.visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-4 {
-  top: 0;
-  right: 385px;
-}
-@media only screen and (max-width: 991px) {
-  .visual-match-wrapper .visual-club-wrapper .visual-club-2 .visual-row-4 {
-    top: 10px;
-    right: 0;
+  .visual-match-wrapper .visual-club-wrapper .visual-club-2 {
+    flex-direction: column-reverse;
   }
 }
 .visual-match-wrapper .visual-club-wrapper .player-wrapper {
