--- a/scss/_page-footer.scss
+++ b/scss/_page-footer.scss
@@ -2,189 +2,196 @@
 @import "variables";
 @import "mixins";
 
-.footer {
-  margin-top: 180px;
-  width: 100%;
-  height: auto;
-  background-color: #313955;
-  color: #fff;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
 
-  @include mq(max_md) {
-    margin-top: 90px;
-  }
+.footer-wraper {
+  background-color: #313955;
+  padding: 32px 0px;
 
   .footer-content {
-    padding: 36px 0px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-
-    @include mq(max_md) {
-      margin: 24px 0px;
-    }
   }
 
-  .logo-footer {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    width: 176px;
+  .main-footer {
+    display: flex;
+    margin-top: 24px;
+  }
+  .footer-logo {
+    display: block;
+    min-width: 176px;
+    max-width: 176px;
     height: 41px;
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
 
-    @include mq(max_md) {
-      width: 144px;
+    @media (max-width: 991px) {
+      min-width: 134px;
+      max-width: 134px;
       height: 36px;
     }
   }
+}
 
-  .txt-detail {
-    margin: 16px 0px 32px 0px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 20px;
-    text-align: center;
-    color: #FFFFFF;
+.footer-wrapper-pc {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  /* or 167% */
 
-    @include mq(max_md) {
-      display: none;
+  color: #ffffff;
+  display: flex;
+
+  @media (max-width: 991px) {
+    display: none;
+  }
+
+  .left-column {
+    width: 20%;
+
+    .description {
+      margin-bottom: 12px;
     }
   }
 
-  .list-club {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    flex-wrap: wrap;
+  .right-column {
+    width: 80%;
+    padding: 0px 32px;
 
-    @include mq(max_md) {
+    .hot-comming-match {
       margin-top: 24px;
+      flex-direction: column;
+
+      .list-comming-match {
+        display: flex;
+      }
     }
-    li {
-      margin-right: 12px;
-      @include mq(max_md) {
+    .top-footer-menu,
+    .hot-comming-match {
+      display: flex;
+
+      .column {
+        width: calc(100% / 4);
+      }
+
+      .title {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 24px;
+        color: #ffffff;
         margin-bottom: 12px;
       }
-      a {
-        display: block;
-        text-decoration: none;
-        width: 80px;
-        height: 80px;
-        border: none;
-        border-radius: 50%;
 
-        @include mq(max_md) {
-          width: 56px;
-          height: 56px;
-          border-radius: 16px;;
+      .sub-menu {
+        display: flex;
+        flex-direction: column;
+
+        li {
+          margin-bottom: 6px;
+          a {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 20px;
+            /* identical to box height, or 167% */
+
+            color: #ffffff;
+          }
         }
 
-        img {
-          display: block;
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border: none;
-          border-radius: 50%;
-          @include mq(max_md) {
-            border-radius: 16px;;
+        .text-danger {
+          a {
+            color: #f1516e !important;
           }
         }
       }
     }
   }
+}
 
-  .sub-footer-menu {
+.footer-wrapper-mb {
+  display: none;
+  flex-direction: column;
+
+  @media (max-width: 991px) {
     display: flex;
-    align-items: center;
+  }
+
+
+  .main-footer {
+    flex-direction: column;
+  }
+  .footer-info {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+
+    .description,
+    .email,
+    .copy-right {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 20px;
+      /* or 154% */
+
+      color: #ffffff;
+    }
+
+    .email {
+      margin: 8px 0px;
+    }
+  }
+
+  .sub-menu {
+    display: flex;
     flex-wrap: wrap;
     margin-bottom: 16px;
-    justify-content: center;
-    text-align: center;
-
-    @include mq(max_md) {
-      margin: 0px 18px;
-    }
-    li  {
-      @include mq(max_md) {
-        margin-bottom: 16px;
-      }
+    li {
+      margin-right: 16px;
+      margin-bottom: 16px;
 
       a {
-        text-decoration: none;
         font-style: normal;
         font-weight: 400;
-        font-size: 14px;
-        line-height: 17px;
-        color: #3AC5C9;
-        margin-right: 16px;
-        display: inline-block;
+        font-size: 13px;
+        line-height: 20px;
+        /* identical to box height */
 
-        @include mq(max_md) {
-          font-style: normal;
-          font-weight: 400;
-          font-size: 13px;
-          line-height: 20px;
-          /* identical to box height */
+        /* #3AC5C9 */
 
-
-          /* #3AC5C9 */
-
-          color: #3AC5C9;
-        }
+        color: #3ac5c9;
       }
     }
   }
 
-  .footer-description {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
-    margin-bottom: 24px;
-    text-align: center;
-    max-width: 635px;
-    margin: 32px 0px;
-
-
-    @include mq(max_md) {
+  .hot-match-comming {
+    .title {
       font-style: normal;
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 18px;
-      text-align: center;
-      max-width: 335px;
-      text-align: center;
-      margin: 24px 0px 16px 0px;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 24px;
+      /* identical to box height, or 150% */
+
+      color: #ffffff;
+      margin-bottom: 12px;
     }
-  }
 
-  .footer-privacy {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
+    .list-hot-match {
+      display: flex;
+      flex-wrap: wrap;
+      li {
+        margin-right: 12px;
+        margin-bottom: 4px;
+        a {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 12px;
+          line-height: 20px;
+          /* or 167% */
 
-    @include mq(max_md) {
-      font-style: normal;
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 18px;
-      text-align: center;
+          color: #ffffff;
+        }
+      }
     }
   }
 }
